[tool.poetry]
name = "sentinel-sampler"
version = "0.1.0"
description = ""
authors = ["RexBanner6000 <tghaynes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rasterio = "^1.3.9"
numpy = "^1.26.4"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
